--- a/src/app/admin/proj-form/proj-form.html
+++ b/src/app/admin/proj-form/proj-form.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="description" class="form-label">Resumo (aparecerá nos cards)</label>
+                    <label for="description" class="form-label">Resumo do Projeto</label>
                     <textarea id="description" formControlName="description" class="form-control" rows="3"></textarea>
                 </div>
 
