--- a/src/app/admin/login/login.scss
+++ b/src/app/admin/login/login.scss
@@ -1,6 +1,10 @@
 .login-container {
   min-height: calc(100vh - 85px);
-  background-image: linear-gradient(to top right, var(--cor-primaria), var(--cor-secundaria));
+  background-image: linear-gradient(
+    to top right,
+    var(--cor-primaria),
+    var(--cor-secundaria)
+  );
 }
 
 .card {
