--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,27 @@ body {
   }
 }
 
+.btn-danger {
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
+
+  &:hover{
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  &:active,
+  &.btn:active {
+  transform: translateY(0);
+  box-shadow: none;
+  }
+
+  &:focus-visible{
+  box-shadow: 0 0 0 0.25rem rgba(2, 117, 129, 0.5);
+  outline: none;
+  }
+}
+
 /*
   Páginas completas
 */
