--- a/src/app/admin/post-form/post-form.html
+++ b/src/app/admin/post-form/post-form.html
@@ -38,21 +38,38 @@
                   <label for="imageFile" class="form-label fw-bold">Imagem de Destaque</label>
                   <input type="file" id="imageFile" class="form-control" (change)="onFileSelected($event)"
                     accept="image/png, image/jpeg">
+
+                  @if (imagePreview) {
+                  <div class="mb-4 text-center">
+                    <p class="mb-2 fw-bold">Pré-visualização:</p>
+                    <img [src]="imagePreview" alt="Pré-visualização da Imagem" class="image-preview">
+                  </div>
+                  }
                 </div>
 
                 <div class="col-md-6 mb-3">
                   <label for="galleryFiles" class="form-label fw-bold">Imagens da Galeria (selecione várias)</label>
                   <input type="file" id="galleryFiles" class="form-control" multiple
                     (change)="onGalleryFilesSelected($event)" accept="image/png, image/jpeg">
+
+                  @if (isEditMode && existingGalleryImages.length > 0) {
+                  <div class="mb-4">
+                    <p class="fw-bold">Imagens Atuais na Galeria:</p>
+                    <div class="d-flex flex-wrap gap-2">
+                      @for (image of existingGalleryImages; track $index) {
+                      <div class="gallery-preview-item">
+                        <img [src]="image.thumbnailImageSrc" [alt]="image.alt">
+                        <button type="button" class="btn-remove-img" (click)="removeExistingGalleryImage(image, $index)"
+                          title="Remover Imagem">
+                          &times;
+                        </button>
+                      </div>
+                      }
+                    </div>
+                  </div>
+                  }
                 </div>
               </div>
-
-              @if (imagePreview) {
-              <div class="mb-4 text-center">
-                <p class="mb-2 fw-bold">Pré-visualização:</p>
-                <img [src]="imagePreview" alt="Pré-visualização da Imagem" class="image-preview">
-              </div>
-              }
 
               <div class="mb-4">
                 <label class="form-label fw-bold">Conteúdo Completo da Postagem</label>
