--- a/src/app/admin/proj-form/proj-form.scss
+++ b/src/app/admin/proj-form/proj-form.scss
@@ -16,3 +16,31 @@
   border-radius: 12px;
   border: 1px solid #000;
 }
+
+.gallery-preview-item {
+  position: relative;
+  
+  img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 1px solid #000;
+  }
+
+  .btn-remove-img {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    width: 24px;
+    height: 24px;
+    background-color: var(--cor-secundaria);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
