--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,63 +1,76 @@
 <footer>
-  <div class="main-footer">
-    <div class="container">
-      <div class="row">
+    <div class="main-footer">
+        <div class="container">
+            <div class="row">
 
-        <div class="col-lg-5 col-md-12 mb-4 mb-lg-0">
-          <div class="footer-widget">
-            <img src="assets/images/abracelogors.png" alt="Logo Instituto AbraceRS" class="footer-logo mb-3">
-            <p class="text-muted">
-              O povo pelo povo. Atuando de forma transparente e direta na reconstrução de vidas no Rio Grande do Sul.
+                <div class="col-lg-5 col-md-12 mb-4 mb-lg-0">
+                    <div class="footer-about">
+                        <img src="assets/images/abracelogors.png" alt="Logo Instituto AbraceRS"
+                            class="footer-logo mb-3">
+                        <p class="text-muted">
+                            O povo pelo povo. Atuando de forma transparente e direta na reconstrução de vidas no Rio
+                            Grande do Sul.
+                        </p>
+                        <div class="social-icons mt-4">
+                            <a href="https://www.instagram.com/institutoabracers/" target="_blank"
+                                aria-label="Instagram" class="me-4"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@institutoabracers" target="_blank" aria-label="TikTok"
+                                class="me-4"><i class="fab fa-tiktok"></i></a>
+                            <a href="https://x.com/InstAbraceRS" target="_blank" aria-label="Twitter" class="me-4"><i
+                                    class="fab fa-twitter"></i></a>
+                            <a href="https://www.youtube.com/@AbraceRS" target="_blank" aria-label="YouTube"><i
+                                    class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-4 col-6">
+                    <div class="footer-widget">
+                        <h5 class="widget-title">Navegue</h5>
+                        <ul class="list-unstyled footer-links">
+                            <li class="mt-4"><a routerLink="/somos">Quem Somos</a></li>
+                            <li class="mt-3"><a routerLink="/atuamos">Como Atuamos</a></li>
+                            <li class="mt-3"><a routerLink="/blog">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-4 col-6">
+                    <div class="footer-widget">
+                        <h5 class="widget-title">Apoie</h5>
+                        <ul class="list-unstyled footer-links">
+                            <li class="mt-4"><a routerLink="/junte">Junte-se a Nós</a></li>
+                            <li class="mt-3"><a href="https://www.vakinha.com.br/5580617" target="_blank">Doar</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-12">
+                    <div class="footer-widget">
+                        <h5 class="widget-title">Contato</h5>
+                        <ul class="list-unstyled footer-contact">
+                            <li class="mt-4">
+                                <i class="fas fa-envelope me-2"></i>
+                                <span>institutoabracers&#64;gmail.com</span>
+                            </li>
+                            <li class="mt-3">
+                                <i class="fas fa-phone me-2"></i>
+                                <span>+55 (51) 99380-1665</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom py-4 text-center">
+        <div class="container">
+            <p class="copyright mb-0">
+                © {{ currentYear }} Instituto AbraceRS - Desenvolvido por <a href="https://github.com/OndeJoaoGularte"
+                    target="_blank">João Gularte</a>
             </p>
-            <div class="social-icons mt-4">
-              <a href="https://www.instagram.com/institutoabracers/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-              <a href="https://www.tiktok.com/@institutoabracers" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-              <a href="https://x.com/InstAbraceRS" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-              <a href="https://www.youtube.com/@AbraceRS" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            </div>
-          </div>
         </div>
-
-        <div class="col-lg-2 col-md-4 col-6">
-          <div class="footer-widget">
-            <h5 class="widget-title">Navegue</h5>
-            <ul class="list-unstyled footer-links">
-              <li><a routerLink="/somos" target="_blank">Quem Somos</a></li>
-              <li><a routerLink="/atuamos" target="_blank">Como Atuamos</a></li>
-              <li><a routerLink="/blog" target="_blank">Blog</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-4 col-6">
-          <div class="footer-widget">
-            <h5 class="widget-title">Apoie</h5>
-            <ul class="list-unstyled footer-links">
-              <li><a routerLink="/associar">Associar-se</a></li>
-              <li><a href="https://www.vakinha.com.br/5580617" target="_blank">Doar</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-12">
-            <div class="footer-widget">
-                <h5 class="widget-title">Contato</h5>
-                <ul class="list-unstyled footer-contact">
-                    <li><i class="fas fa-envelope"></i> <span>institutoabracers&#64;gmail.com</span></li>
-                    <li><i class="fas fa-phone"></i> <span>+55 (51) 99380-1665</span></li>
-                </ul>
-            </div>
-        </div>
-
-      </div>
     </div>
-  </div>
-
-  <div class="footer-bottom">
-    <div class="container">
-      <p class="copyright mb-0">
-        © 2025 Instituto AbraceRS - Desenvolvido por <a href="https://github.com/OndeJoaoGularte" target="_blank">João Gularte</a>
-      </p>
-    </div>
-  </div>
 </footer>
