--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 :root {
   --cor-primaria: #027581;
   --cor-secundaria: #e74c3c;
-  --cor-destaque: #f1c40f;
+  --cor-destaque: #ffe632;
   --cor-fundo: #f5f5dc;
   --cor-texto: #4a4a4a;
   --cor-texto-claro: #ffffff;
