--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -30,7 +30,7 @@
 
     <nav>
         <div class="nav-container d-flex justify-content-between align-items-center mx-auto px-5">
-            <a class="nav-logo" routerLink="/">
+            <a class="nav-logo" routerLink="/" (click)="isMenuOpen = false">
                 <img src="assets/images/abracelogors.png" alt="Logo Instituto AbraceRS" height="50" />
             </a>
 
