--- a/src/app/components/projects/projects-info/projects-info.scss
+++ b/src/app/components/projects/projects-info/projects-info.scss
@@ -1,6 +1,6 @@
-.project-info-page{
-    max-width: 100vw;
-}
+/*
+    Início
+*/
 
 .breadcrumb-nav {
   .breadcrumb-link {
@@ -32,6 +32,10 @@
   color: var(--cor-secundaria);
 }
 
+/*
+    Conteúdo
+*/
+
 .content-wrapper {
   ::ng-deep h1,
   ::ng-deep h2 {
@@ -57,6 +61,10 @@
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
   }
 }
+
+/*
+    Sidebar
+*/
 
 .sidebar-card {
   position: sticky;
